unpackaged/main/default/objects/RFP_Initiation_Accounts__c/RFP_Initiation_Accounts__c.object-meta.xml
<CustomObject>
    <label>RFP Initiation Accounts</label>
    <nameField>
        <displayFormat>RA-{0000}</displayFormat>
        <label>RFP Accounts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RFP Initiation Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>