unpackaged/main/default/objects/RFP_Initiation_Accounts__c/fields/Firm_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Firm_Name_Text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Firm Name (Text)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>