unpackaged/main/default/objects/RFP_Initiation_Accounts__c/fields/Law_Firm_Partner__c.field-meta.xml
<CustomField>
    <fullName>Law_Firm_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Law Firm Partner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Law_Firm__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>RFP Initiation Accounts</relationshipLabel>
    <relationshipName>RFP_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>