unpackaged/main/default/objects/RFP_Initiation_Accounts__c/fields/RFP__c.field-meta.xml
<CustomField>
    <fullName>RFP__c</fullName>
    <label>RFP</label>
    <referenceTo>RFP_Initiation__c</referenceTo>
    <relationshipName>RFP_Accounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>