unpackaged/main/default/objects/RFP_Initiation_Accounts__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>International Counsel</fullName>
            </value>
            <value>
                <fullName>Local Counsel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>